--- a/css/style.css
+++ b/css/style.css
@@ -847,6 +847,10 @@ li {
         padding-top: 30px;
     }
 
+    .tour__title {
+        font-size: 28px;
+    }
+
     .tour__container {
         width: 100%;
         padding: 0 10px;
