--- a/css/style.css
+++ b/css/style.css
@@ -746,6 +746,9 @@ li {
 
 
 @media screen and (max-width: 479px) {
+    section {
+        margin-bottom: 30px;
+    }
     .container {
         width: 100%;
         padding: 0 15px;
@@ -849,6 +852,14 @@ li {
     }
 
     .tour__title {
+        padding-right: 40px;
+        font-size: 32px;
+    }
+
+    .title-vis {
+        padding: 0;
+    }
+    .tour__name h3 {
         font-size: 28px;
     }
 
@@ -860,6 +871,10 @@ li {
 
     .tour__item {
         display: block;
+    }
+
+    .tour-program__list {
+        padding: 20px 0 20px 30px;;
     }
 
     .tour__name {
@@ -876,17 +891,13 @@ li {
     }
 
     .tour__include__item {
-        width: calc((100% / 2) - (22px));
+        width: 100%;
+        margin: 0 0 20px 0;
     }
 
-    .tour__include__item:nth-child(2n) {
-        margin-right: 0;
+    .tour__include__list {
+        padding: 0 5px;
     }
-
-    .tour__include__item:nth-child(3n) {
-        margin-right: 20px;
-    }
-
     .tour__include-item__descr {
         color: black;
     }
@@ -906,6 +917,10 @@ li {
 
     .contacts-form {
         flex-direction: column;
+    }
+
+    .contacts__title {
+        text-align: center;
     }
 
     .contacts-form__block {
@@ -932,7 +947,14 @@ li {
     .contacts-form__block:not(:nth-child(2n)) {
         padding-right: 0;
     }
+
+    .accordion__item-body-content {
+        padding-top: 20px;
+    }
 }
+
+
+
 
 @media (min-width: 480px) and (max-width: 768px) {
     .container {
