--- a/css/style.css
+++ b/css/style.css
@@ -847,14 +847,21 @@ li {
         padding: 0 15px;
     }
 
-    .tour__title {
+    .tour {
+        margin-bottom: 0;
+    }
+
+    .tour-accordion__title {
         padding-right: 40px;
-        font-size: 26px;
+        font-size: 16px;
     }
 
     .title-vis {
         padding: 0;
+        font-size: 24px;
+        text-align: center;
     }
+
     .tour__name h3 {
         font-size: 20px;
     }
@@ -942,6 +949,16 @@ li {
 
     .contacts-form__block:not(:nth-child(2n)) {
         padding-right: 0;
+    }
+    .accordion__item {
+        padding: 10px 0;
+        margin: 0;
+        border-top: 1px solid grey;
+    }
+
+
+    .accordion__item-header {
+        margin-bottom: 0px;
     }
 
     .accordion__item-body-content {
