--- a/test.css
+++ b/test.css
@@ -1,17 +1,17 @@
 
 .accordion__item {
-    margin: 1rem 0;
-    border-radius: 0.5rem;
+
 }
 
 .accordion__item-header {
     position: relative;
-    margin-bottom: 20px;
-    max-height: 3.5rem;
-    line-height: 1.25rem;
-    font-weight: bold;
     display: flex;
     align-items: center;
+    padding: 35px 0;
+    max-height: 3.5rem;
+    border-top: 1px solid grey;
+    line-height: 1.25rem;
+    font-weight: bold;
     cursor: pointer;
 }
 
@@ -34,10 +34,8 @@
 }
 
 .accordion__item-body-content {
+    margin-bottom: 30px;
     line-height: 1.5rem;
 }
 
-/*.accordion__item-header.active + .accordion__item-body {*/
-/*    max-height: 200px;*/
-/*}*/
 
