--- a/css/style.css
+++ b/css/style.css
@@ -746,9 +746,6 @@ li {
 
 
 @media screen and (max-width: 479px) {
-    section {
-        margin-bottom: 30px;
-    }
     .container {
         width: 100%;
         padding: 0 15px;
@@ -957,7 +954,7 @@ li {
 
 
     .accordion__item-header {
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
     .accordion__item-body-content {
